# docs/swagger.json
@@ -10,23 +10,24 @@
     "paths": {
         "/subscriptions": {
             "get": {
-                "description": "List subscriptions",
+                "description": "Список подписок",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Список подписок",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID",
+                        "description": "ID пользователя",
                         "name": "user_id",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Service Name",
+                        "description": "Название сервиса",
                         "name": "service_name",
                         "in": "query"
                     }
@@ -42,7 +43,7 @@
                         }
                     },
                     "500": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -53,7 +54,7 @@
                 }
             },
             "post": {
-                "description": "Create a new subscription",
+                "description": "Создание новой подписки",
                 "consumes": [
                     "application/json"
                 ],
@@ -61,11 +62,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Создание подписки",
                 "parameters": [
                     {
-                        "description": "Subscription to create",
+                        "description": "Подписка для создания",
                         "name": "subscription",
                         "in": "body",
                         "required": true,
@@ -85,7 +87,7 @@
                         }
                     },
                     "400": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -94,7 +96,7 @@
                         }
                     },
                     "500": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -107,38 +109,39 @@
         },
         "/subscriptions/total_cost": {
             "get": {
-                "description": "Calculate total cost of subscriptions",
+                "description": "Расчет общей стоимости подписок",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Расчет общей стоимости подписок",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID",
+                        "description": "ID пользователя",
                         "name": "user_id",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Service Name",
+                        "description": "Название сервиса",
                         "name": "service_name",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Start Date",
+                        "description": "Дата начала",
                         "name": "start_date",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "End Date",
+                        "description": "Дата окончания",
                         "name": "end_date",
                         "in": "query",
                         "required": true
@@ -155,7 +158,7 @@
                         }
                     },
                     "400": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -164,7 +167,7 @@
                         }
                     },
                     "500": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -177,17 +180,18 @@
         },
         "/subscriptions/{id}": {
             "get": {
-                "description": "Get a subscription by ID",
+                "description": "Получение подписки по ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Получение подписки по ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Subscription ID",
+                        "description": "ID подписки",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -201,7 +205,7 @@
                         }
                     },
                     "400": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -210,7 +214,7 @@
                         }
                     },
                     "404": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -221,7 +225,7 @@
                 }
             },
             "put": {
-                "description": "Update a subscription",
+                "description": "Обновление подписки",
                 "consumes": [
                     "application/json"
                 ],
@@ -229,8 +233,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Обновление подписки",
                 "parameters": [
                     {
                         "type": "integer",
@@ -289,17 +294,18 @@
                 }
             },
             "delete": {
-                "description": "Delete a subscription",
+                "description": "Удаление подписки",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "subscriptions"
+                    "Подписки"
                 ],
+                "summary": "Удаление подписки",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Subscription ID",
+                        "description": "ID подписки",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -307,7 +313,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message",
+                        "description": "сообщение",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -316,7 +322,7 @@
                         }
                     },
                     "400": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -325,7 +331,7 @@
                         }
                     },
                     "404": {
-                        "description": "error",
+                        "description": "ошибка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -370,6 +376,7 @@
             }
         },
         "handlers.UpdateSubscriptionRequest": {
+            "description": "Обновление подписки",
             "type": "object",
             "properties": {
                 "end_date": {
